<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/appBar"
            layout="@layout/poster_image_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPicMovieDetail"
            android:layout_width="95dp"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:elevation="10dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appBar"
            app:layout_constraintVertical_bias="0.30">

            <ImageView
                android:id="@+id/ivPosterDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="@string/image_poster_detail" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitleDetail"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/avengers_end_game"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cvPicMovieDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cvPicMovieDetail"
            app:layout_constraintTop_toBottomOf="@+id/appBar" />

        <TextView
            android:id="@+id/textOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/overview"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvPicMovieDetail" />

        <TextView
            android:id="@+id/tvOverviewDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/hollywood_1927_as_silent_movie_star_george_valentin_wonders_if_the_arrival_of_talking_pictures_will_cause_him_to_fade_into_oblivion_he_sparks_with_peppy_miller_a_young_dancer_set_for_a_big_break"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textOverview"
            app:layout_constraintTop_toBottomOf="@+id/textOverview" />

        <TextView
            android:id="@+id/textReleaseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/release_date"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverviewDetail" />

        <TextView
            android:id="@+id/tvReleaseDateDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/_2019_08_23"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textReleaseDate"
            app:layout_constraintTop_toBottomOf="@+id/textReleaseDate" />


        <TextView
            android:id="@+id/textAverageRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/rating"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseDateDetail" />


        <TextView
            android:id="@+id/textRatingCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/textAverageRating"
            android:text="@string/rating_count"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textAverageRating"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/textAverageRating"
            app:layout_constraintTop_toTopOf="@+id/textAverageRating"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvRatingDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_number"
            app:layout_constraintEnd_toEndOf="@+id/textAverageRating"
            app:layout_constraintStart_toStartOf="@+id/textAverageRating"
            app:layout_constraintTop_toBottomOf="@+id/textAverageRating" />

        <TextView
            android:id="@+id/tvRatingCountDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_21_000"
            app:layout_constraintEnd_toEndOf="@+id/textRatingCount"
            app:layout_constraintStart_toStartOf="@+id/textRatingCount"
            app:layout_constraintTop_toBottomOf="@+id/textRatingCount" />

        <TextView
            android:id="@+id/textPopularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/popularity"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRatingDetail" />

        <TextView
            android:id="@+id/tvPopularityDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_21_000"
            app:layout_constraintEnd_toEndOf="@+id/textPopularity"
            app:layout_constraintStart_toStartOf="@+id/textPopularity"
            app:layout_constraintTop_toBottomOf="@+id/textPopularity" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/menu_favorite"
            app:layout_anchorGravity="bottom|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_bookmark_border" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>